--- a/index.scss
+++ b/index.scss
@@ -1,11 +1,29 @@
 
-.carousel-inner {
-  height:200px;
-  width:auto;
+$primaryBackground:#FF0000;
+$textColor: #343434;
+$highlight: #B1C66F;
+$light-highlight: #85A92F;
+
+.topnav {
+  float: left;
+  background-color: $primaryBackground;
+  color: $textColor;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  overflow: hidden;
+  box-shadow: #dddddd;
 }
 
-.carousel-caption {
-  font-family: sans-serif;
-  font-size: 20px;
+.section-carousel img {
+  width: 90%;
+  margin: auto;
+}
 
+.section-carousel p {
+  text-align: center;
+}
+
+.section-info {
 }
