--- a/index.scss
+++ b/index.scss
@@ -1,29 +1,48 @@
-
-$primaryBackground:#FF0000;
+$primaryBackground: #FFFFFF;
 $textColor: #343434;
 $highlight: #B1C66F;
 $light-highlight: #85A92F;
 
-.topnav {
-  float: left;
+body{
+  color:$textColor;
+  padding: 0 20px 20px 20px;
+  font-family: Impact, Charcoal, sans-serif;
+}
+
+.navbar {
+  float:left;
   background-color: $primaryBackground;
   color: $textColor;
   text-align: center;
-  padding: 14px 16px;
+  padding: 20px 20px 20px 20px;
   text-decoration: none;
   font-size: 17px;
   overflow: hidden;
   box-shadow: #dddddd;
+  justify-content: center;
 }
 
 .section-carousel img {
-  width: 90%;
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+}
+
+.carousel-item p {
+  width: 80%;
   margin: auto;
+  font-size:50px;
 }
 
-.section-carousel p {
+container {
+  padding: 20px 20px 20px 20px;
+  background-color:$primaryBackground;
+}
+
+footer p {
+  color: $textColor;
   text-align: center;
-}
-
-.section-info {
+  a {
+    text-align: right;
+  }
 }
